--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
     "socket.io": "^4.1.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0"
   }
 }
