--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
+    "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0"
+    "@babel/preset-react": "^7.16.0",
+    "babel-preset-react-app": "^10.0.1"
   }
 }
