--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,12 @@
     "axios": "^1.7.5",
     "chat-app": "file:..",
     "framer-motion": "^4",
+    "lottie-web": "^5.12.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-lottie": "^1.2.3",
+    "react-lottie": "^1.2.4",
     "react-notification-badge": "^1.5.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "^0.0.0",
     "react-scrollable-feed": "^1.3.1",
     "socket.io-client": "^4.1.2",
@@ -47,5 +48,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
+  },
+  "overrides":{
+    "react-lottie": {
+      "react": "^0.14.7 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^22.0.0" 
+    }
   }
 }
